[package]
name = "local_timestamps"
version = "0.1.0"
edition = "2021"
# name = "draw_box"
# version = "0.2.1"
# edition = "2021"
authors = ["Sven Ponelat"]
# license = "MIT"
description = "Names for box drawing elements."
repository = "https://github.com/svencp/local_timestamps.git"
keywords = ["timestamps","unix timestamps"]
categories = ["timestamps"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronoutil = "0.2.3"
chrono = "0.4.19"




