[package]
name = "local_timestamps"
version = "0.1.0"
edition = "2021"
authors = ["Sven Ponelat"]
license = "GPL-2.0 license "
description = "operations on local timestamps"
repository = "https://github.com/svencp/local_timestamps.git"
keywords = ["timestamps","unix timestamps"]
categories = ["timestamps"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronoutil = "0.2.3"
chrono = "0.4.19"




