[package]
name = "local_timestamps"
version = "0.1.2"
edition = "2021"
authors = ["Sven Ponelat"]
license = "MIT OR Apache-2.0"
description = "operations on local timestamps"
repository = "https://github.com/svencp/local_timestamps.git"
keywords = ["timestamps"]
categories = ["date-and-time"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronoutil = "0.2.3"
chrono = "0.4.19"




